ensured dict keys were valid

--- a/got-data.ipynb
+++ b/got-data.ipynb
@@ -49,10 +49,13 @@
     "# given a soup, this function pulls out text from the following sections:\n",
     "# Background, Season [1-5]\n",
     "def return_character_dictionary(soup, char, char_dict):\n",
+    "    p=re.compile(\"Background$\")\n",
+    "    \n",
     "    # extracts the paragraphs for background, season 1, ...\n",
     "    \n",
     "    # get background separately \"Background\"\n",
     "    for section in soup.findAll('span', text=re.compile(\"Background$\")):\n",
+    "        # fix up the section text name\n",
     "        nextNode = section\n",
     "        text_tmp = ''\n",
     "        foundTextFlag = False\n",
@@ -78,7 +81,7 @@
     "                text_tmp = p.sub('', text_tmp) # removes references\n",
     "                p = re.compile(u'\\n')\n",
     "                text_tmp = p.sub(' ', text_tmp) # removes newlines\n",
-    "                char_dict[section.text][char] = text_tmp.replace(u'\\xa0', u' ')\n",
+    "                char_dict['Background'][char] = text_tmp.replace(u'\\xa0', u' ')\n",
     "                break\n",
     "\n",
     "            if nextNode.name == 'p':\n",
@@ -88,7 +91,15 @@
     "            else:\n",
     "                continue\n",
     "\n",
-    "    for section in soup.findAll('span', text=re.compile(\"Season [1-5]$\")):\n",
+    "    p=re.compile(\"Season [1-5]$\")\n",
+    "\n",
+    "    for section in soup.findAll('span', text=p):\n",
+    "        section_text = p.findall(section.text)\n",
+    "        if len(section_text) == 1:\n",
+    "            section_text = section_text[0]\n",
+    "        else:\n",
+    "            section_text = section.text\n",
+    "            \n",
     "        nextNode = section\n",
     "        text_tmp = ''\n",
     "        foundTextFlag = False\n",
@@ -109,7 +120,7 @@
     "                p = re.compile('\\[\\d+\\]')\n",
     "                text_tmp = p.sub('', text_tmp)\n",
     "                if section.text in char_dict.keys():\n",
-    "                    char_dict[section.text][char] = text_tmp.replace('\\n', '').replace(u'\\xa0', u' ')\n",
+    "                    char_dict[section_text][char] = text_tmp.replace('\\n', '').replace(u'\\xa0', u' ')\n",
     "                \n",
     "                break\n",
     "\n",
@@ -134,22 +145,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name: Stannis Baratheon\n",
-      "Season(s): 2, 3, 4, 5\n",
-      "First seen: \"The North Remembers\"\n",
-      "Last seen: \"Mother's Mercy\"\n",
-      "Appeared in: 24 episodes (see below)\n",
-      "Mentioned in: \"The Wolf and the Lion\"\"You Win or You Die\"\"Baelor\"\"Fire and Blood\"\n",
-      "Titles: King of the Andals and the First Men (claimant)Lord of the Seven Kingdoms (claimant)Protector of the Realm (claimant)Lord of DragonstoneLord of Storm's End (disputed)Lord Paramount of the Stormlands (disputed)Master of Ships (formerly)\n",
-      "Also known as: Stannis of House Baratheon, First of His NameThe King in the Narrow SeaWarrior of LightThe Lord's ChosenSon of Fire\n",
-      "Status: Deceased\n",
-      "Death: Beheaded after the Battle of Winterfell by Brienne of Tarth with Oathkeeper\n",
-      "Origin: Storm's End\n",
-      "Allegiance: House Baratheon of DragonstoneHouse Baratheon of Storm's End\n",
-      "Culture: Andal\n",
-      "Religion: R'hllor, the Lord of Light (convert)\n",
-      "Family: {Steffon Baratheon} - father{Cassana Baratheon} - mother{Robert Baratheon} - older brother{Renly Baratheon} - younger brother{Selyse Baratheon} - wife{Shireen Baratheon} - daughter{Petyr Baratheon} - stillborn son{Tommard Baratheon} - stillborn son{Edric Baratheon} - stillborn son{Axell Florent} - brother-in-lawImry Florent - brother-in-lawGendry - bastard nephew{Barra} - bastard nieceCersei Lannister - sister-in-law{Joffrey Baratheon} - alleged nephew{Myrcella Baratheon} - alleged nieceTommen Baratheon - alleged nephewMargaery Tyrell - former sister-in-law\n",
-      "Portrayed by: Stephen Dillane\n",
+      "Name: Arya Stark\n",
+      "Season(s): 1, 2, 3, 4, 5, 6\n",
+      "First seen: \"Winter is Coming\"\n",
+      "Appeared in: 39 episodes (see below)\n",
+      "Titles: Princess\n",
+      "Also known as: ArryLanna\n",
+      "Status: Alive\n",
+      "Age: 16 in Season 6[1]\n",
+      "Origin: Winterfell\n",
+      "Allegiance: House StarkFaceless Men\n",
+      "Culture: Northmen\n",
+      "Religion: Old Gods of the Forest (formerly)Faith of the Seven (formerly)Many-Faced God\n",
+      "Family: {Eddard Stark} - father{Catelyn Stark} - mother{Robb Stark} - brotherSansa Stark - sisterBran Stark - brotherRickon Stark - brother{Jon Snow} - bastard paternal half-brotherBenjen Stark - paternal uncle{Brandon Stark} - paternal uncle{Lyanna Stark} - paternal aunt{Jon Arryn} - uncle by marriagePetyr Baelish - uncle by marriageRoslin Frey - aunt by marriage{Rickard Stark} -  paternal grandfatherBrynden Tully - maternal great-uncle{Hoster Tully} - maternal grandfather{Minisa Tully} - maternal grandmotherEdmure Tully - maternal uncle{Lysa Arryn} - maternal auntRobin Arryn - maternal first cousin{Talisa Maegyr} - sister-in-lawTyrion Lannister - brother-in-lawRamsay Bolton - brother-in-law\n",
+      "Portrayed by: Maisie Williams\n",
       "Background text: found!\n",
       "Season 5 text: found!\n",
       "Season 4 text: found!\n",
@@ -161,7 +170,7 @@
    ],
    "source": [
     "# this code block is useful for testing if it worked on an individual character\n",
-    "char = 'Stannis_Baratheon'\n",
+    "char = 'Arya_Stark'\n",
     "char = char.replace('\\n','') # remove newline sometimes contained in character name\n",
     "\n",
     "\n",
@@ -236,7 +245,7 @@
       "Barristan_Selmy .. Ben_Plumm .. Beric_Dondarrion .. Bowen_Marsh .. Brienne_of_Tarth .. \n",
       "Bronn .. Brynden_Tully .. Cersei_Lannister .. Daario_Naharis .. Daenerys_Targaryen .. \n",
       "Davos_Seaworth .. Doran_Martell .. Ellaria_Sand .. Euron_Greyjoy .. Gendry .. \n",
-      "Gerold_Dayne_The_Darkstar .. Grand_Maester_Pycelle .. Gregor_Clegane .. Grey_Worm .. Griff .. \n",
+      "Gerold_Dayne_The_Darkstar .. Pycelle .. Gregor_Clegane .. Grey_Worm .. Griff .. \n",
       "Hizdahr_zo_Loraq .. Jaime_Lannister .. Janos_Slynt .. Jaqen_H'ghar .. Jon_Snow .. \n",
       "Jorah_Mormont .. Kevan_Lannister .. Lady_Stoneheart .. Lancel_Lannister .. Loras_Tyrell .. \n",
       "Lord_Varys .. Mace_Tyrell .. Maester_Aemon .. Mance_Rayder .. Margaery_Tyrell .. \n",
@@ -244,7 +253,7 @@
       "Obara_Sand .. Olenna_Tyrell .. Olly .. Petyr_Baelish .. Podrick_Payne .. \n",
       "Qyburn .. Ramsay_Bolton .. Rattleshirt .. Reznak_mo_Reznak .. Robin_Arryn .. \n",
       "Roose_Bolton .. Samwell_Tarly .. Sansa_Stark .. Ser_Arys_Oakheart .. Stannis_Baratheon .. \n",
-      "The_High_Sparrow .. Theon_Greyjoy .. Thoros_of_Myr .. Tommen_Baratheon .. Tormund_Giantsbane .. \n",
+      "High_Sparrow .. Theon_Greyjoy .. Thoros_of_Myr .. Tommen_Baratheon .. Tormund_Giantsbane .. \n",
       "Trystane_Martell .. Tycho_Nestoris .. Tyene_Sand .. Tyrion_Lannister .. Victarion_Greyjoy .. \n",
       "Yara_Greyjoy .. Young_Griff .. "
      ]
