--- a/got-data.ipynb
+++ b/got-data.ipynb
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -442,20 +442,20 @@
        "Balon_Greyjoy         0          0       0         0       0      0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# load in the scores from season 5\n",
-    "scores = pd.DataFrame.from_csv('season5_scores.csv')\n",
+    "scores = pd.read_csv('season5_scores.csv')\n",
     "scores.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
