fixed data scrape for some characters

--- a/got-data.ipynb
+++ b/got-data.ipynb
@@ -18,6 +18,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import unicodedata\n",
+    "import got_tools as gt\n",
     "from __future__ import print_function"
    ]
   },
@@ -36,102 +37,6 @@
     "    character_list.append(char.replace('\\n',''))\n",
     "    \n",
     "char_list.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# given a soup, this function pulls out text from the following sections:\n",
-    "# Background, Season [1-5]\n",
-    "def return_character_dictionary(soup, char, char_dict):\n",
-    "    p=re.compile(\"Background$\")\n",
-    "    \n",
-    "    # extracts the paragraphs for background, season 1, ...\n",
-    "    \n",
-    "    # get background separately \"Background\"\n",
-    "    for section in soup.findAll('span', text=re.compile(\"Background$\")):\n",
-    "        # fix up the section text name\n",
-    "        nextNode = section\n",
-    "        text_tmp = ''\n",
-    "        foundTextFlag = False\n",
-    "        while True:\n",
-    "            if nextNode is None:\n",
-    "                break # ??\n",
-    "\n",
-    "            nextNode = nextNode.next\n",
-    "            if foundTextFlag == True and \\\n",
-    "            (nextNode is None or nextNode.name == 'h3' or nextNode.name == 'h2'):\n",
-    "                # check if this is a new section\n",
-    "                # if it is, we are done, and we should break\n",
-    "                #print('Done! Here is the text for {}:').format(section.text)\n",
-    "                #print(text_tmp)\n",
-    "                #print('*** end text ***')\n",
-    "\n",
-    "                # process the text, removing any references\n",
-    "                # p is a compiled regex\n",
-    "                # s is a string  \n",
-    "                # s = p.sub(process_match, s)\n",
-    "\n",
-    "                p = re.compile('\\[\\d+\\]')\n",
-    "                text_tmp = p.sub('', text_tmp) # removes references\n",
-    "                p = re.compile(u'\\n')\n",
-    "                text_tmp = p.sub(' ', text_tmp) # removes newlines\n",
-    "                char_dict['Background'][char] = text_tmp.replace(u'\\xa0', u' ')\n",
-    "                break\n",
-    "\n",
-    "            if nextNode.name == 'p':\n",
-    "                # found the text, now loop through until we find the next section\n",
-    "                text_tmp += ' ' + nextNode.text\n",
-    "                foundTextFlag = True\n",
-    "            else:\n",
-    "                continue\n",
-    "\n",
-    "    p=re.compile(\"Season [1-5]$\")\n",
-    "\n",
-    "    for section in soup.findAll('span', text=p):\n",
-    "        section_text = p.findall(section.text)\n",
-    "        if len(section_text) == 1:\n",
-    "            section_text = section_text[0]\n",
-    "        else:\n",
-    "            section_text = section.text\n",
-    "            \n",
-    "        nextNode = section\n",
-    "        text_tmp = ''\n",
-    "        foundTextFlag = False\n",
-    "        while True:\n",
-    "            nextNode = nextNode.next\n",
-    "            if nextNode is None:\n",
-    "                break # ??\n",
-    "\n",
-    "            if foundTextFlag == True and \\\n",
-    "            (nextNode.name == 'h3' or nextNode.name == 'h2'):\n",
-    "                # check if this is a new section\n",
-    "                # if it is, we are done, and we should break\n",
-    "                #print('Done! Here is the text for {}:').format(section.text)\n",
-    "                #print(text_tmp)\n",
-    "                #print('*** end text ***')\n",
-    "\n",
-    "                # process the text, removing any references\n",
-    "                p = re.compile('\\[\\d+\\]')\n",
-    "                text_tmp = p.sub('', text_tmp)\n",
-    "                if section.text in char_dict.keys():\n",
-    "                    char_dict[section_text][char] = text_tmp.replace('\\n', '').replace(u'\\xa0', u' ')\n",
-    "                \n",
-    "                break\n",
-    "\n",
-    "            if nextNode.name == 'p':\n",
-    "                # found the text, now loop through until we find the next section\n",
-    "                text_tmp += ' ' + nextNode.text\n",
-    "                foundTextFlag = True\n",
-    "            else:\n",
-    "                continue\n",
-    "\n",
-    "    return char_dict"
    ]
   },
   {
@@ -209,7 +114,7 @@
     "\n",
     "\n",
     "# call function to get text data\n",
-    "char_c = return_character_dictionary(soup, char, c)\n",
+    "char_c = gt.return_character_dictionary(soup, char, c)\n",
     "\n",
     "for item in char_c:\n",
     "    if char_c[item] is not None:\n",
@@ -305,7 +210,7 @@
     "    \n",
     "    \n",
     "    # call function to get text data\n",
-    "    c = return_character_dictionary(soup, char, c)"
+    "    c = gt.return_character_dictionary(soup, char, c)"
    ]
   },
   {
