move data to data dir

--- a/got-data-mortality-prediction.ipynb
+++ b/got-data-mortality-prediction.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "# load in character list\n",
     "character_list = []\n",
-    "char_list = open('all_characters.txt', 'r')\n",
+    "char_list = open('data/all_characters.txt', 'r')\n",
     "for char in char_list:  \n",
     "    character_list.append(char.replace('\\n',''))\n",
     "    \n",
@@ -443,7 +443,7 @@
    "source": [
     "# write data to file\n",
     "df = df_info.merge(df_txt, left_index=True, right_index=True, how='left')\n",
-    "df.to_csv('got_data_all_characters.csv')"
+    "df.to_csv('data/got_data_all_characters.csv')"
    ]
   }
  ],
