--- a/got-data.ipynb
+++ b/got-data.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "# load in character list\n",
     "character_list = []\n",
-    "char_list = open('char_list_s5.txt', 'r')\n",
+    "char_list = open('data/char_list_s5.txt', 'r')\n",
     "for char in char_list:  \n",
     "    character_list.append(char.replace('\\n',''))\n",
     "    \n",
@@ -354,7 +354,7 @@
    ],
    "source": [
     "# load in the scores from season 5\n",
-    "scores = pd.read_csv('season5_scores.csv')\n",
+    "scores = pd.read_csv('data/season5_scores.csv')\n",
     "scores.head()"
    ]
   },
@@ -372,7 +372,7 @@
     "df = df.merge(df_txt, left_index=True, right_index=True, how='left')\n",
     "df.head()\n",
     "\n",
-    "df.to_csv('got_data.csv')"
+    "df.to_csv('data/got_data.csv')"
    ]
   },
   {
