--- a/got-mortality-prediction.ipynb
+++ b/got-mortality-prediction.ipynb
@@ -2754,7 +2754,7 @@
    "source": [
     "# read data from the got-data.ipynb file\n",
     "# most of it is scrapped from the game of thrones tv show wiki\n",
-    "df = pd.read_csv('got_data_all_characters.csv', sep=',', index_col=0)\n",
+    "df = pd.read_csv('data/got_data_all_characters.csv', sep=',', index_col=0)\n",
     "\n",
     "# who do we not have data for?\n",
     "idxRemove = (df['Season(s)'].isnull())\n",
