--- a/got-analysis.ipynb
+++ b/got-analysis.ipynb
@@ -380,7 +380,7 @@
    "source": [
     "# read data from the got-data.ipynb file\n",
     "# most of it is scrapped from the game of thrones tv show wiki\n",
-    "df = pd.read_csv('got_data.csv', sep=',', index_col=0)\n",
+    "df = pd.read_csv('data/got_data.csv', sep=',', index_col=0)\n",
     "\n",
     "# who do we not have data for?\n",
     "idxNoData = (df['Season(s)'].isnull())\n",
