--- a/got-parse-data.ipynb
+++ b/got-parse-data.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -81,12 +81,13 @@
       "Removed 76 characters who only appeared in season 3.\n",
       "Removed 101 characters who only appeared in season 4.\n",
       "Removed 88 characters who only appeared in season 5.\n",
+      "Removed 26 characters who only appeared in season 6.\n",
       "\n",
       "Removed 12 bloody Targaryens.\n",
       "\n",
       "Removed 58 historical characters.\n",
       "\n",
-      "Total of 211 characters.\n"
+      "Total of 185 characters.\n"
      ]
     }
    ],
@@ -121,7 +122,7 @@
     "print('\\nRemoved {} who died on/before season 1. Ned :('.format(np.sum(idxRemove)))\n",
     "\n",
     "# remove all who appeared/died in the same season\n",
-    "for s in ['1','2','3','4','5']:\n",
+    "for s in ['1','2','3','4','5','6']:\n",
     "    idxRemove = (df['Season(s)'].values == s) | (str(df['Season(s)'].values) == s)\n",
     "    df = df.loc[~idxRemove]\n",
     "    print('Removed {} characters who '.format(np.sum(idxRemove)) + \\\n",
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -156,12 +157,9 @@
      "output_type": "stream",
      "text": [
       "Aemon                                              - died in season 5 (was in 1, 3, 4, 5)\n",
-      "Aeron_Greyjoy                                      - alive (was in 6)\n",
-      "Ahko                                               - alive (was in 6)\n",
       "Alliser_Thorne                                     - alive (was in 1, 4, 5, 6)\n",
       "Areo_Hotah                                         - died in season 6 (was in 5, 6)\n",
       "Armeca                                             - alive (was in 1, 2)\n",
-      "Arthur_Dayne                                       - died in season 6 (was in 6)\n",
       "Arwaya_Frey                                        - alive (was in 1, 3)\n",
       "Arya_Stark                                         - alive (was in 1, 2, 3, 4, 5, 6)\n",
       "Arys_Oakheart                                      - alive (was in 1, 2,  5)\n",
@@ -172,7 +170,6 @@
       "Benjen_Stark                                       - alive (was in 1, 6)\n",
       "Beric_Dondarrion                                   - alive (was in 1, 3)\n",
       "Biter                                              - died in season 4 (was in 1, 2, 4)\n",
-      "Bobono                                             - alive (was in 6)\n",
       "Boros_Blount                                       - alive (was in 1, 2, 3, 4, 5)\n",
       "Bowen_Marsh                                        - alive (was in 5, 6)\n",
       "Bran_Stark                                         - alive (was in 1, 2, 3, 4, 6)\n",
@@ -181,7 +178,6 @@
       "Brienne_of_Tarth                                   - alive (was in 2, 3, 4, 5, 6)\n",
       "Bronn                                              - alive (was in 1, 2, 3, 4, 5, 6)\n",
       "Brynden_Tully                                      - alive (was in 3, 6)\n",
-      "Caleotte                                           - died in season 6 (was in 6)\n",
       "Catelyn_Stark                                      - died in season 3 (was in 1, 2, 3)\n",
       "Cersei_Lannister                                   - alive (was in 1, 2, 3, 4, 5, 6)\n",
       "Chella                                             - alive (was in 1, 2)\n",
@@ -189,7 +185,6 @@
       "Daario_Naharis                                     - alive (was in 3, 4, 5, 6)\n",
       "Daenerys_Targaryen                                 - alive (was in 1, 2, 3, 4, 5, 6)\n",
       "Davos_Seaworth                                     - alive (was in 2, 3, 4, 5, 6)\n",
-      "Dickon_Tarly                                       - alive (was in 6)\n",
       "Dongo                                              - died in season 4 (was in 3, 4)\n",
       "Dontos_Hollard                                     - died in season 4 (was in 2, 4)\n",
       "Doran_Martell                                      - alive (was in 5, 6)\n",
@@ -204,8 +199,6 @@
       "Edric_Baratheon                                    - died in season 3 (was in Season 3)\n",
       "Elia_Martell                                       - died in season 5 (was in Complete Guide to Westeros, 4, 5)\n",
       "Ellaria_Sand                                       - alive (was in 4, 5, 6)\n",
-      "Euron_Greyjoy                                      - alive (was in 6)\n",
-      "Forzo                                              - alive (was in 6)\n",
       "Garlan_Tyrell                                      - alive (was in HBO Viewer's Guide)\n",
       "Gendry                                             - alive (was in 1, 2, 3)\n",
       "Ghost                                              - alive (was in 1, 2, 3, 4, 5, 6)\n",
@@ -214,38 +207,29 @@
       "Grenn                                              - died in season 4 (was in 1, 2, 3, 4)\n",
       "Grey_Wind                                          - died in season 3 (was in 1, 2, 3)\n",
       "Grey_Worm                                          - alive (was in 3, 4, 5, 6)\n",
-      "Harald_Karstark                                    - alive (was in 6)\n",
       "Harrion_Karstark                                   - died in season 3 (was in 2, 3)\n",
-      "High_Priestess_of_the_Dosh_khaleen                 - alive (was in 6)\n",
       "High_Septon_(After_the_riot_of_King%27s_Landing)   - alive (was in 3, 4, 5)\n",
       "High_Septon_(Before_the_riot_of_King%27s_Landing)  - died in season 2 (was in 1, 2)\n",
       "High_Sparrow                                       - alive (was in 5, 6)\n",
       "Hizdahr_zo_Loraq                                   - died in season 5 (was in 4, 5)\n",
       "Hodor                                              - alive (was in 1, 2, 3, 4, 6)\n",
       "Hot_Pie                                            - alive (was in 1, 2, 3, 4)\n",
-      "Howland_Reed                                       - alive (was in 6)\n",
       "Ilyn_Payne                                         - alive (was in 1, 2)\n",
       "Irri                                               - died in season 2 (was in 1, 2)\n",
-      "Izembaro                                           - alive (was in 6)\n",
       "Jacks                                              - alive (was in 1, 2)\n",
       "Jaime_Lannister                                    - alive (was in 1, 2, 3, 4, 5, 6)\n",
       "Janos_Slynt                                        - died in season 5 (was in 1, 2, 4, 5)\n",
       "Jaqen_H%27ghar                                     - alive (was in 1, 2, 5, 6)\n",
       "Jeor_Mormont                                       - died in season 3 (was in 1, 2, 3)\n",
-      "Jhaqo                                              - alive (was in 6)\n",
       "Joanna_Lannister                                   - died in season 5 (was in 2, 3, 5)\n",
       "Joffrey_Baratheon                                  - died in season 4 (was in 1, 2, 3, 4)\n",
       "Jojen_Reed                                         - died in season 4 (was in 3, 4)\n",
-      "Jon_Umber_(Smalljon)                               - alive (was in 6)\n",
       "Jorah_Mormont                                      - alive (was in 1, 2, 3, 4, 5, 6)\n",
       "Joss_Stilwood                                      - alive (was in 1, 4)\n",
       "Joyeuse_Erenford                                   - died in season 3 (was in 1, 3)\n",
       "Karl_Tanner                                        - died in season 4 (was in 3, 4)\n",
       "Kayla                                              - alive (was in 3, 4)\n",
-      "Kesh                                               - alive (was in 6)\n",
       "Kevan_Lannister                                    - alive (was in 1, 2, 5, 6)\n",
-      "Kinvara                                            - alive (was in 6)\n",
-      "Lady_Stork                                         - alive (was in 6)\n",
       "Lancel                                             - alive (was in 1, 2, 5, 6)\n",
       "Lannister_bannerman_1_(The_Ghost_of_Harrenhal)     - alive (was in 2 4)\n",
       "Lannister_bannerman_2_(The_Ghost_of_Harrenhal)     - alive (was in 1, 2, 3)\n",
@@ -257,7 +241,6 @@
       "Lord_of_Bones                                      - died in season 5 (was in 2, 3, 5)\n",
       "Lothar_Frey                                        - alive (was in 3, 6)\n",
       "Luwin                                              - died in season 2 (was in 1, 2)\n",
-      "Lyanna_Stark                                       - died in season 6 (was in 6)\n",
       "Lysa_Arryn                                         - died in season 4 (was in 1, 4)\n",
       "Mace_Tyrell                                        - alive (was in 4, 5, 6)\n",
       "Mance_Rayder                                       - died in season 5 (was in 3, 4, 5)\n",
@@ -267,12 +250,10 @@
       "Maron_Greyjoy                                      - died in season 2 (was in 1, 2)\n",
       "Marya_Seaworth                                     - alive (was in 2, 3)\n",
       "Meera_Reed                                         - alive (was in 3, 4, 6)\n",
-      "Melessa_Tarly                                      - alive (was in 6)\n",
       "Melisandre                                         - alive (was in 2, 3, 4, 5, 6)\n",
       "Meryn_Trant                                        - died in season 5 (was in 1, 2, 3, 4, 5)\n",
       "Mhaegen                                            - alive (was in 1, 2)\n",
       "Missandei                                          - alive (was in 3, 4, 5, 6)\n",
-      "Moro                                               - alive (was in 6)\n",
       "Mossador                                           - died in season 5 (was in 4, 5)\n",
       "Myranda                                            - died in season 6 (was in 3, 4, 5, 6)\n",
       "Myrcella_Baratheon                                 - died in season 6 (was in 1, 2, 5, 6)\n",
@@ -292,17 +273,14 @@
       "Preston_Greenfield                                 - alive (was in 1, 2, 3, 4, 5, 6)\n",
       "Pycelle                                            - alive (was in 1, 2, 3, 4, 5, 6)\n",
       "Pypar                                              - died in season 4 (was in 1, 3, 4)\n",
-      "Qhono                                              - alive (was in 6)\n",
       "Qyburn                                             - alive (was in 3, 4, 5, 6)\n",
       "Rakharo                                            - died in season 2 (was in 1, 2)\n",
       "Ramsay_Bolton                                      - alive (was in 3, 4, 5, 6)\n",
-      "Randyll_Tarly                                      - alive (was in 6)\n",
       "Rast                                               - died in season 4 (was in 1, 3, 4)\n",
       "Razdal_mo_Eraz                                     - alive (was in 3, 6)\n",
       "Renly_Baratheon                                    - died in season 2 (was in 1, 2)\n",
       "Rhaegal                                            - alive (was in 1, 2, 3, 4, 5)\n",
       "Rhaego                                             - died in season 2 (was in 1, 2)\n",
-      "Rhalko                                             - alive (was in 6)\n",
       "Rickard_Karstark                                   - died in season 3 (was in 1, 2, 3)\n",
       "Rickard_Stark                                      - died in season 5 (was in 1, 5)\n",
       "Rickon_Stark                                       - alive (was in 1, 2, 3, 6)\n",
@@ -327,7 +305,6 @@
       "Stannis_Baratheon                                  - died in season 5 (was in 2, 3, 4, 5)\n",
       "Steffon_Baratheon                                  - died in season 5 (was in 1, 5)\n",
       "Talisa_Stark                                       - died in season 3 (was in 2, 3)\n",
-      "Talla_Tarly                                        - alive (was in 6)\n",
       "Ternesio_Terys                                     - alive (was in 4, 5)\n",
       "Theon_Greyjoy                                      - alive (was in 1, 2, 3, 4, 5, 6)\n",
       "Thoros                                             - alive (was in 3, 6)\n",
@@ -341,7 +318,6 @@
       "Trystane_Martell                                   - alive (was in 5, 6)\n",
       "Tycho_Nestoris                                     - alive (was in 4, 5)\n",
       "Tyene_Sand                                         - alive (was in 5, 6)\n",
-      "Tyrell_bannerman                                   - alive (was in 6)\n",
       "Tyrion_Lannister                                   - alive (was in 1, 2, 3, 4, 5, 6)\n",
       "Tysha                                              - alive (was in 1, 2, 3)\n",
       "Tytos_Lannister                                    - died in season 2 (was in 1, 2)\n",
@@ -364,8 +340,7 @@
       "Yezzan_zo_Qaggaz                                   - alive (was in 5, 6)\n",
       "Ygritte                                            - died in season 4 (was in 2, 3, 4)\n",
       "Yohn_Royce                                         - alive (was in 4, 5, 6)\n",
-      "Yoren                                              - died in season 2 (was in 1, 2)\n",
-      "Zanrush                                            - alive (was in 6)\n"
+      "Yoren                                              - died in season 2 (was in 1, 2)\n"
      ]
     }
    ],
@@ -379,6 +354,18 @@
     "        print('{:50s} - died in season {} (was in {})'.format(i, s, df.loc[i,'Season(s)']))\n",
     "    else:\n",
     "        print('{:50s} - alive (was in {})'.format(i, df.loc[i,'Season(s)']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# write data to file\n",
+    "df.to_csv('data/got_data_valid_characters.csv')"
    ]
   }
  ],
